# etes

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  config.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  CommitHash.tsx  Commits.tsx  ConnectionState.tsx  DateTime.tsx  OpenButton.tsx  PullRequest.tsx  PullTable.tsx  Releases.tsx  RunButton.tsx  Server.tsx  ServiceTable.tsx  index.css  main.tsx  theme.ts  types.ts  useEtes.ts  util.ts
src/: auth.rs  config.rs  data.rs  error.rs  events.rs  executable.rs  github.rs  main.rs  monitor.rs  proxy.rs  query.graphql  service.rs  services.rs  upload.rs  user.rs  util.rs  ws.rs
test/: hello-world
