[package]
name = "etes"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", default-features = false, features = [
    "cookie-private",
] }
bytes = "1.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.1"
constant_time_eq = "0.3.1"
cookie = "0.18.1"
futures = "0.3.31"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
oauth2 = "4.4.2"
parking_lot = "0.12"
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
structstruck = "0.4.1"
sysinfo = "0.32.0"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
spaxum = { git = "https://github.com/tweedegolf/spaxum.git" }

[build-dependencies]
spaxum = { git = "https://github.com/tweedegolf/spaxum.git" }

[dev-dependencies]
tower = "0.5.1"
http-body-util = "0.1.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
