[package]
name = "etes"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12", default-features = false, features = [
    "cookie-private",
] }
bytes = "1.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
constant_time_eq = "0.4"
cookie = "0.18"
futures = "0.3"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
oauth2 = "4.4"
parking_lot = "0.12"
rand = "0.10"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
structstruck = "0.5"
sysinfo = "0.38"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
spaxum = { git = "https://github.com/tweedegolf/spaxum.git" }

[build-dependencies]
spaxum = { git = "https://github.com/tweedegolf/spaxum.git" }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
